# sextant

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
samples/: s1_copy.sh  s1_echo.py  s1_run.sh
sextant/: __init__.py  cli.py  plugin.py  sentinelone.py  splunk.py  thehive.py
sextant/auth/: okta.py  webauthn.py
sextant/plugins/: sentinelone.py  splunk.py  thehive.py
src/sextant/: __init__.py  cli.py  config.py  utils.py
src/sextant/auth/: okta.py  webauthn.py
src/sextant/clients/: splunk.py  thehive.py
src/sextant/clients/gitlab/: __init__.py  client.py  commands.py
src/sextant/clients/sentinelone/: __init__.py  client.py  commands.py
src/sextant/clients/splunk/: __init__.py  client.py  commands.py
src/sextant/clients/sysdig/: __init__.py  client.py  commands.py
src/sextant/clients/thehive/: __init__.py  client.py  commands.py
src/sextant/endpoints/: splunk.py  thehive.py
tests/: test_utils.py
