[project]
name = "sextant"
version = "0.2.1"
description = "Wrapper for observations in datalakes"
authors = [
    { name = "Plup", email = "plup@plup.io"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich",
    "fido2",
    "requests",
    "confuse",
    "beautifulsoup4",
    "docstring_parser"
]

[project.scripts]
sextant = "sextant.cli:load"

