[project]
name = "sextant"
version = "0.6"
description = "Endpoint monitoring"
authors = [
    { name = "Plup", email = "plup@plup.io"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "pyyaml",
    "rich",
    "httpx"
]

[project.scripts]
sextant = "sextant.cli:entrypoint"
