[metadata]
name = sextant
version = 0.2.0
url = https://gitlab.com/plup/sextant
author = Plup
author_email = plup@plup.io
description = Wrapper for observations in datalakes
long_description = file: README.md
license = ISC
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
setup_requires =
    wheel
install_requires =
    click
    rich
    fido2
    requests
    confuse
    thehive4py
    splunk-sdk
    beautifulsoup4

[options.entry_points]
console_scripts =
     sextant = sextant.cli:main

[options.extras_require]
dev =
    pytest
    pytest-cov
    flake8
    pydocstyle

[flake8]
max-line-length = 99
doctests = True
exclude = .git, .eggs, __pycache__, docs/, build/, dist/, .venv
